<resources>
    <!-- Other -->
    <string name="app_name">AndroidProjetDPSH</string>
    <string name="hello">Bonjour</string>
    <string name="validate">VALIDER</string>
    <string name="logout">QUITTER</string>
    <string name="verify">VERIFIER</string>
    <string name="save">SAUVEGARDER</string>
    <string name="fields_empty">Veuillez remplir tous les champs</string>
    <string name="hint_password">hint a password...</string>
    <string name="hint_email">hint a password...</string>
    <string name="sign_in">hint a password...</string>
    <string name="sign_up">hint a password...</string>..

    <!-- WallActivity -->
    <string name="textWall">Bienvenue sur le mur !</string>
    <string name="createPostButton">Créer un post</string>

    <!-- CreatePostActivity -->
    <string name="firstText">Créer un post</string>
    <string name="createtitle">Entrer le titre</string>
    <string name="createdescription">Entrer la description</string>
    <string name="createpicture">Donner l\'adresse http de la photo</string>


    <!-- LoginActivity strings -->
    <string name="intro_name_connexion">Welcome to the DPSH app !</string>
    <string name="intro_login">Connexion</string>
    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="connexion_button">Log In</string>
    <string name="not_signed_in">Please Sign In</string>
    <string name="signed_in_success">Signed in successful !</string>
    <string name="signed_in_fail">Signed in failed !</string>
    <string name="new_account_button">Register</string>

    <string name="log_out_button">Log Out</string>
    <string name="log_out">You have been logged out</string>

</resources>
